--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+##ÅäÖÃredis
+spring.redis.database=3
+## RedisµØÖ·
+spring.redis.host=47.98.182.28
+## Redis¶Ë¿Ú
+spring.redis.port=6379
+## RedisÃÜÂë
+spring.redis.password=20171211st
+## ÏìÓ¦
+spring.redis.timeout=5000
 
+## ¶Ë¿ÚºÅ
+server.port=8081
