--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-##ÅäÖÃredis
+##é¥œç¦»redis
 spring.redis.database=3
-## RedisµØÖ·
-spring.redis.host=47.98.182.28
-## Redis¶Ë¿Ú
+## Redisè¯ç¡Š
+spring.redis.host=******
+## Rediså‚·è«³
 spring.redis.port=6379
-## RedisÃÜÂë
-spring.redis.password=20171211st
-## ÏìÓ¦
+## Redisèº‡é¢
+spring.redis.password=******
+## ç ’èŒ¼
 spring.redis.timeout=5000
 
-## ¶Ë¿ÚºÅ
+## å‚·è«³ç˜
 server.port=8081
